[gd_scene load_steps=4 format=3 uid="uid://bfx8hn1fl51fj"]

[ext_resource type="Script" path="res://scripts/intro_door_puzzle.gd" id="1_4ck50"]
[ext_resource type="Texture2D" uid="uid://dh1mqoj42mgk8" path="res://assets/brackeys_platformer_assets/sprites/platforms.png" id="2_xb0sd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1dgj"]
size = Vector2(30.5, 8)

[node name="intro_door_puzzle" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_4ck50")

[node name="door1" type="Node2D" parent="."]
position = Vector2(-30, 0)

[node name="door" type="AnimatableBody2D" parent="door1"]
position = Vector2(11, -18)
rotation = 1.5708
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="door1/door"]
texture = ExtResource("2_xb0sd")
region_enabled = true
region_rect = Rect2(17, 49, 30, 7)

[node name="Area2D" type="Area2D" parent="door1/door"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="door1/door/Area2D"]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_s1dgj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="door1/door"]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_s1dgj")

[node name="door2" type="Node2D" parent="."]
position = Vector2(-30, 0)

[node name="door" type="AnimatableBody2D" parent="door2"]
position = Vector2(30, 0)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="door2/door"]
texture = ExtResource("2_xb0sd")
region_enabled = true
region_rect = Rect2(17, 49, 30, 7)

[node name="Area2D" type="Area2D" parent="door2/door"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="door2/door/Area2D"]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_s1dgj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="door2/door"]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_s1dgj")

[node name="door3" type="Node2D" parent="."]
position = Vector2(-30, 0)

[node name="door" type="AnimatableBody2D" parent="door3"]
position = Vector2(49, -19)
rotation = -1.5708
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="door3/door"]
texture = ExtResource("2_xb0sd")
region_enabled = true
region_rect = Rect2(17, 49, 30, 7)

[node name="Area2D" type="Area2D" parent="door3/door"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="door3/door/Area2D"]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_s1dgj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="door3/door"]
position = Vector2(0, 2.18557e-08)
shape = SubResource("RectangleShape2D_s1dgj")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
